2005-01-09  Martin Blom  <martin@blom.org>

	* Released AHI 5.15b (ix86be only).

	* Released ahi.device 5.55.

	* ahi.device: Minor modifications to make the ix86be version build
	again, this time using a non-broken version of the compiler. :-)

2005-01-08  Martin Blom  <martin@blom.org>

	* Released AHI 5.15.

	* Released ahi.device 5.54.

	* Released AHI preferences 5.14.

	* AHI preferences: Moved the selection of scale modes to the
	global, advanced prerference page. Changed the default to "Full".

	* ahi.device: Now used global scale mode settings. Changed the
	default to AHI_SCALE_FIXED_0_DB.

	* ahi.device: Tweaked the default "dizzy" tags for BestAudioID()
	to award the user's preferred audio mode. [Fab]

2004-11-08  Martin Blom  <martin@blom.org>

 	* Released AHI-Handler 5.5.

	* AHI-Handler: Fixed bad IFF chunk lengths for AIFF/AIFC
	files. [Patch from Stefan Haubenthal]

2004-11-03  Martin Blom  <martin@blom.org>

 	* Released AHI-Handler 5.4.

	* AHI-Handler: Fixed bad struct alignment for non-m68k
	builds. [Stefan Haubenthal]

	* Released ahi.device 5.53.

	* ahi.device: 16 bit samples were broken in 7.1 mode. [Marcin
	'Morgoth' Kurek]

2004-11-02  Martin Blom  <martin@blom.org>

	* Released ahi.device 5.52.

	* ahi.device: DSP echo and master volume did not work in 7.1
	mode. Fixed now.

	* Updated copyright year and removed almost all CVS/RCS tags from
	the source code.

2004-11-01  Martin Blom  <martin@blom.org>

	* Released AddAudioModes 5.6.

	* Applied a couple of patches from Gunther Nikl. Thanks Gunther!

2004-10-31  Martin Blom  <martin@blom.org>

	* Released AHI 5.14.

	* Imported the rest of the AROS modifications from AROS
	CVS. Mostly Makefile mods.

	* Released emu10kx.audio 5.22.

	* emu10kx.audio: Reduced the volume boost by 6 dB. According to my
	voltmeter, the driver now outputs around 2 Vpp when the master
	volume is set to 0 dB and around 8 Vpp when the master volume is