@@ -98,8 +98,8 @@ MyKPrintFArgs( UBYTE*           fmt,
 # define INTGW(q,t,n,f)                                                 \
        q t n(APTR d __asm("a1")) { return f(d); }
 # define PROCGW(q,t,n,f)						\
-	__asm("_" #n "= _" #f);						\
-	q t n(void);
+	asm(".stabs \"_" #n "\",11,0,0,0;.stabs \"_" #f "\",1,0,0,0");	\
+	/*q*/ t n(void);
 # define INTERRUPT_NODE_TYPE NT_INTERRUPT
 
 #else
