@@ -13,7 +13,7 @@ struct DeviceBase
 };
 
 #define DRIVERBASE_SIZEOF (sizeof (struct DeviceBase))
-#define DOSBase  ((struct DosLibrary*) DeviceBase->dosbase)
+#define DOSBase  *((struct DosLibrary**) &DeviceBase->dosbase)
 
 struct DeviceData
 {
